  there, but will not be functional until I've reworked the
  communications layer to allow the script to be distributed.

  The HTTP plugin now records the HTTP response status code to the
  data log for HTTPRequests that are wrapped in Tests. If multiple
  HTTPRequests are wrapped in a Test, the status code of the last
  response is recorded. Thanks to Carlos Franco for the idea.


Grinder 3.0-beta8
-----------------

  Fix a bug in the TCPProxy which prevented the recording of 8-bit
  POST data. Thanks to Joakim Suarez for the report.

  The TCPProxy now copes with query strings and form data that are not
  name value pairs. Thanks to Ryan Balsam for the report.

  Tentative fix to bug 690639. (TCPProxy recorded HTTP script refers
  to header array before declaration.)

  Documentation updates. Correct JMS example scripts.

  Spruce up console UI.

  Allow the console to be optionally reset with the worker processes.
  (Feature request 686632).


Grinder 3.0-beta7
-----------------

  Fix synchronisation of the console new tests event which was causing
  null pointer exceptions.

  Fix synchronisation of TestStatisticsMap that caused potential data
  loss and worker process stack traces.

  Fix handling of thread shutdown exceptions. Threads again now
  respond correctly to shutdown/reset requests.

  Improve console handling of large numbers of tests.


Grinder 3.0-beta6
-----------------

  Enhanced statistics API for scripts.

  Documentation.

  Source code clean up.


Grinder 3.0-beta5
-----------------

  Expose script and document API to allow scripts to work with custom
  statistics.

  Rationalise the plugin API so that PluginProcessContext and
  PluginThreadContext no longer extend Logger and FilenameFactory.

  Add JMS examples.

  Improve cleaning up of child processes when the agent is killed.

  Some script documentation.


Grinder 3.0-beta4
-----------------

  Correct implementation to read grinder.consolePort rather than