@@ -1,33 +1,35 @@
 Paco Gomez
 
-Philip Aston	paston@bea.com
+Philip Aston		paston@bea.com
 
-Phil Dawes	pdawes@bea.com
+Phil Dawes		pdawes@bea.com
 
-Paddy Spencer	paddy.spencer@physics.org
+Paddy Spencer		paddy.spencer@physics.org
 
-Richard Wallace	richard.wallace@bea.com
+Richard Wallace		richard.wallace@bea.com
 
-Stuart Tily	tily@sylo.org
+Stuart Tily		tily@sylo.org
 
-Phillip Burgess phillip_burgess@mail.com
+Phillip Burgess 	phillip_burgess@mail.com
 
-Christian Nedregard christian@laycan.com
+Christian Nedregard 	christian@laycan.com
 
-Mikael Suokas   cms@suokas.org
+Mikael Suokas   	cms@suokas.org
 
-David Freels    david.freels@peregrine.com
+David Freels    	david.freels@peregrine.com
 
-Kalle Burbeck   kalle.burbeck@idainfront.se
+Kalle Burbeck   	kalle.burbeck@idainfront.se
 
-Dirk Feufel     Dirk.Feufel@abaXX.de
+Dirk Feufel     	Dirk.Feufel@abaXX.de
 
-Kjetil JD	kjetiljd@usa.net
+Kjetil JD		kjetiljd@usa.net
 
-Todd Wasson     twasson@nks.net
+Todd Wasson     	twasson@nks.net
 
-Jose Antonio Zapata Rey joseantonio.zapatarey@hp.com
+Jose Antonio Zapata Rey	joseantonio.zapatarey@hp.com
 
-Richard Perks   rperks@bea.com
+Richard Perks   	rperks@bea.com
 
-Manuel Silva	manuel.silva@bea.com
+Manuel Silva		manuel.silva@bea.com
+
+Bill Schnellinger 	bill@schnellinger.com
