@@ -57,6 +57,7 @@
       <tr><td>Jose Antonio Zapata Rey</td></tr>
       <tr><td>Richard Perks</td></tr>
       <tr><td>Manuel Silva</td></tr>
+      <tr><td>Bill Schnellinger</td></tr>
     </table>
 
     <h2>Credits</h2>
